# campus-navigator

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DiGraph.py  Dockerfile  README.md  ShortestRoute.py  data_entry.py  docker-compose.prod.yml  docker-compose.yml  graph_manager.py  main.py  pyproject.toml  run.py
app/: __init__.py  auth.py  events.py  models.py  routes.py
app/logic/: __init__.py  data_entry.py  graph_manager.py  shortest_route.py
app/static/css/: styles.css
app/static/js/: directions.js  map.js
app/static/logic/: graph_manager.py
app/templates/: index.html  register.html
data/: edges.json  floors.json  nodes.json
tools/: coord_picker.html  csv_import.py  edge_picker.html  generate_vertical_edges.py  npb_rooms.csv
