[project]
name = "campus-navigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]
[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
pythonVersion = "3.14"
